created header, and home

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,5 @@
+@import "normalize.css";
+
 @font-face {
   font-family: 'Roboto Light';
   font-style: normal;
@@ -43,6 +45,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: Helvetica;
-  font-size: 18px;
+  font-size: 14px;
 }
 
